//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Profile {
  id String [pk]
  userId String [unique, not null]
  name String [not null]
  imageUrl String [not null]
  email String [not null]
  servers Server [not null]
  members Member [not null]
  channels Channel [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Server {
  id String [pk]
  name String [not null]
  imageUrl String [not null]
  inviteCode String [unique, not null]
  profileId String [not null]
  profile Profile [not null]
  members Member [not null]
  channels Channel [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Member {
  id String [pk]
  role MemberRole [not null, default: 'GUEST']
  profileId String [not null]
  profile Profile [not null]
  serverId String [not null]
  server Server [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Channel {
  id String [pk]
  name String [not null]
  type ChannelType [not null, default: 'TEXT']
  profileId String [not null]
  profile Profile [not null]
  serverId String [not null]
  server Server [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum MemberRole {
  ADMIN
  MODERATOR
  GUEST
}

Enum ChannelType {
  TEXT
  AUDIO
  VIDEO
}

Ref: Server.profileId > Profile.id [delete: Cascade]

Ref: Member.profileId > Profile.id [delete: Cascade]

Ref: Member.serverId > Server.id [delete: Cascade]

Ref: Channel.profileId > Profile.id [delete: Cascade]

Ref: Channel.serverId > Server.id [delete: Cascade]